force-app/main/default/objects/Known_Issues__c/fields/IDR_Product_2__c.field-meta.xml
<CustomField>
    <fullName>IDR_Product_2__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Foreign key to Product2 table, if a
case relates to a specific product, this links to that product</description>
    <label>Product or Service Name 2</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Known Issues (Product or Service Name 2)</relationshipLabel>
    <relationshipName>Known_Issues1</relationshipName>
    <type>Lookup</type>
</CustomField>