force-app/main/default/objects/Known_Issues__c/fields/IDR_REAL_Form_Required__c.field-meta.xml
<CustomField>
    <fullName>IDR_REAL_Form_Required__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Is a REaL form required? Yes or No response required.
Checkbox for: &quot;Does this complaint relate/create a COR event/Compliance Incident&quot;</description>
    <inlineHelpText>A REaL form is required if there has been an Operational Risk Event: a failure of internal process, people and/or systems, or from an external event.
Note: Ticking this box does not automatically generate a REaL form. If a REaL form is required, it will need to be submitted by following your Businesses BAU process. For assistance, search: ‘REAL form’ on MAX or speak with your Line Manager.</inlineHelpText>
    <label>REaL Form Required</label>
    <type>Checkbox</type>
</CustomField>