force-app/main/default/objects/Known_Issues__c/fields/IDR_Second_Issue__c.field-meta.xml
<CustomField>
    <fullName>IDR_Second_Issue__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Checkbox to identify whether known issue has second issue</description>
    <label>Is there Second issue</label>
    <type>Checkbox</type>
</CustomField>