force-app/main/default/objects/Known_Issues__c/fields/IDR_Status__c.field-meta.xml
<CustomField>
    <fullName>IDR_Status__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Status of the case</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Under Investigation</fullName>
            </value>
            <value>
                <fullName>Escalated</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Provisionally Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>