force-app/main/default/objects/Known_Issues__c/fields/IDR_Sub_Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>IDR_Sub_Issue_Type__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Based on the type of case, the sub type provides a more detailed categorisation of the case.</description>
    <label>Sub Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>IDR_Issue_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>IDR_Subsequent_Issue_Type</valueSetName>
    </valueSet>
</CustomField>