force-app/main/default/objects/Known_Issues__c/fields/IDR_Subsequent_Issue_3__c.field-meta.xml
<CustomField>
    <fullName>IDR_Subsequent_Issue_3__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Sub categorisation of third issue</description>
    <label>Subsequent Issue Type 3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>IDR_Issue_Type_3__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>None</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Branch queues / wait time</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Call queues / wait time</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Trading hours/location/closures</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Design/layout/content</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>System fault/outage</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Merchant terminal issue</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Digital</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Account/Profile set up</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Account/Profile Maintenance</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Incorrect or insufficient explanation or disclosure</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Fee or interest dispute</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Fee waiver or interest benefit not received</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>Rewards points not applied / unable to be redeemed</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>Foreign exchange amount/rate dispute</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Rate not competitive</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>Change to fees/rates/rewards structure</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>Request for financial assistance</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>Failure to respond or process request for assistance</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>Declines financial assistance</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>Arrangement considered unsuitable</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>Inappropriate or excessive contact</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>Pledged or blocked account</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>Disputed debt</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>Collector/agent conduct</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>Information/correspondence incorrect/not provided</label>
            </value>
            <value>
                <fullName>29</fullName>
                <label>Incorrect set up</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>Title/encumbrance lodgement or release issue</label>
            </value>
            <value>
                <fullName>31</fullName>
                <label>Valuation outcome or delay</label>
            </value>
            <value>
                <fullName>32</fullName>
                <label>Loan disbursement issue/error</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>