force-app/main/default/objects/Known_Issues__c/fields/IDR_Third_Issue__c.field-meta.xml
<CustomField>
    <fullName>IDR_Third_Issue__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Checkbox to identify whether the known issue has third issue</description>
    <label>Is there third issue?</label>
    <type>Checkbox</type>
</CustomField>