force-app/main/default/objects/Known_Issues__c/fields/IDR_Written_Response_Requested__c.field-meta.xml
<CustomField>
    <fullName>IDR_Written_Response_Requested__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Is a Written Response to the Complaint Requested by customer? Yes or No response</description>
    <inlineHelpText>Has the customer requested a written response? (Do not ask the customer, only record yes if customer has specifically requested a response in writing)</inlineHelpText>
    <label>Written Response Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>