force-app/main/default/objects/Known_Issues__c/fields/IDR_Written_Response_Required__c.field-meta.xml
<CustomField>
    <fullName>IDR_Written_Response_Required__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Is a Written Response to the Complaint Required under regulations/policy? Yes or No response</description>
    <inlineHelpText>Is the complaint relating to hardship, a declined insurance claim, the value of an insurance claim or a decision of a superannuation trustee?</inlineHelpText>
    <label>Hardship/Declined Insurance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>