force-app/main/default/objects/Known_Issues__c/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName>
    <description>The categorisation of the case.</description>
    <label>Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IDR_Issue_Type</valueSetName>
    </valueSet>
</CustomField>