force-app/main/default/objects/Known_Issues__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Foreign key to Product2 table</description>
    <inlineHelpText>Start typing the ANZ product or Service the complaint relates to for available options to appear</inlineHelpText>
    <label>Product or Service Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Known Issues</relationshipLabel>
    <relationshipName>Known_Issues</relationshipName>
    <type>Lookup</type>
</CustomField>