force-app/main/default/objects/Known_Issues__c/fields/Sub_Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Issue_Type__c</fullName>
    <description>Based on the type of case, the sub type provides a more detailed categorisation of the case.</description>
    <label>Sub Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IDR_Subsequent_Issue_Type</valueSetName>
    </valueSet>
</CustomField>